--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="@bool/allow_backup"
         android:icon="@drawable/logo_biru"
         android:label="@string/app_name"
-        android:roundIcon="@android:color/transparent"
+        android:roundIcon="@drawable/logo_biru"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.DayNight"
         tools:ignore="AllowBackup">
@@ -22,7 +22,7 @@
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
-            android:label="@string/app_name_short"
+            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.DayNight.Launcher">
             <intent-filter>
